iso center sectino starts

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -76,6 +76,8 @@
 \input{data_extraction/data_extraction}
 
 \Chapter{Gradient ISO Center Localization}
+\label{iso_center}
+\input{isocenter/isocenter}
 
 \Chapter{Parameter Estimation}
 
