--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -57,12 +57,14 @@
 
 \Chapter{Introduction}
 \label{introduction}
+\input{introduction/intro.tex}
 
 \Chapter{Background}
 \label{background}
 
 \Chapter{Overview}
 \label{overview}
+% \input{overview/main}
 
 % algorithm overviews
 % canny, peakdet, etc
