updated thesis title, outlines etc with Dr. Schulte

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -36,13 +36,13 @@
   \lstinputlisting[caption={#1},label={#2}]{#3}
 }
 
-\title{MRI Distortion Correction ... }
+\title{A New Phantom and Gradient Isocenter Estimation for MRI Distortion Correction}
 \author{Zongqi Cai}
 \Department
 \EmailAddress{caiz@csusb.edu}
 \Advisor{Keith Evan Schubert}
-\Committee*{Kay Zemoudeh}{Haiyan Qiao}{}
-\CSUSBDate{Janurary 2010}
+\Committee*{Kay Zemoudeh}{Haiyan Qiao}{Reinhard Schulte}{}
+\CSUSBDate{July 2013}
 \Copyright
 
 \AbstractText{abstract contents}
@@ -62,8 +62,8 @@
 \Chapter{Background}
 \label{background}
 
-\Chapter{Overview}
-\label{overview}
+% \Chapter{Overview}
+% \label{overview}
 % \input{overview/main}
 
 % algorithm overviews
@@ -73,19 +73,18 @@
 \label{phantom_design}
 \input{phantom/phantom_design}
 
+\Chapter{Gradient Isocenter Localization}
+\label{iso_center}
+\input{isocenter/isocenter}
+
 \Chapter{Data Extraction}
 \label{data_extraction}
 \input{data_extraction/data_extraction}
 
-\Chapter{Gradient ISO Center Localization}
-\label{iso_center}
-\input{isocenter/isocenter}
-
 \Chapter{Parameter Estimation}
 
-\Chapter{Verification}
-
-\Chapter{Conclusion}
+% \Chapter{Verification}
+\Chapter{Summery and Conclusion}
 
 \bibliographystyle{plain}
 \bibliography{thesis}
